# Ettuseus

./: .clang-tidy  .clangd  .envrc  .gitignore  README.md  default.nix  devshell.nix  flake.nix  formatter.nix  meson.build
include/: burst.hpp  chain.hpp  generator.hpp  sdr_manager.hpp
lib/: chain.cpp  sdr_manager.cpp
python/: bindings.cpp
